 PATCH: [ 1394717 ] Fix resource.h include for translations
  Src/Languages: */Merge*.rc
  Src/Languages deleted: UpdateAll_resource_h.bat
  Src/Languages deleted: */resource.h (localized versions of resource.h)
 BUG: [ 1395107 ] MergeKorean.rc not compile in cvs trunk
  (resource.h => ..\..\resource.h fix missed Korean somehow)
  Src/Languages/Korean: MergeKorean.rc


2006-01-01 Kimmo
 PATCH: [ 1394759 ] Allows quotes in Rational ClearCase checkout comment
  Submitted by Gal Hammer
  Src: MainFrm.cpp
 Add Gal Hammer to contributors list
  Docs/Users: Contributors.txt

2006-01-01 Perry
 BUG: [ 1394857 ] cvs trunk does not compile, ANSI, FindEncodingIdFromNameOrAl
  Src: codepage_detect.cpp

2006-01-01 Kimmo
 PATCH: [ 1392347 ] Fix status after synching unique binary files
  Src: DirScan.cpp
 PATCH: [ 1394464 ] Find again code doesn't recognize dos/mac EOLs
  Src/editlib: ccrystaltextview.cpp
 BUG: [ 1394851 ] cvs trunk does not compile (DirScan.cpp, sRule)
  Src: DirScan.cpp

2005-12-31 Perry
 PATCH: [ 1394247 ] Fix GuessEncoding recognition of codepages
 BUG: [ 1394234 ] GuessEncodings fails to recognize CP-437
  Src: codepage_detect.cpp
 PATCH: [ 1393979 ] Delete unused DiffWrapper fnc cleanup_script
  Src: DiffWrapper.cpp

2005-12-30 Perry
 PATCH: [ 1391732 ] Do not offer to unify codepages in UNICODE build
  Also introduces new error IDS_DIFFERENT_UNICODINGS and new
   global function IsUnicodeBuild.
  (Post-application)
  Doing language synchronizations for this patch.
  Src: Merge.rc
   Languages\Brazilian\MergeBrazilian.rc
   Languages\Bulgarian\MergeBulgarian.rc
   Languages\Catalan\MergeCatalan.rc
   Languages\ChineseSimplified\MergeChineseSimplified.rc
   Languages\ChineseTraditional\MergeChineseTraditional.rc
   Languages\Czech\MergeCzech.rc
   Languages\Danish\MergeDanish.rc
   Languages\Dutch\MergeDutch.rc
   Languages\German\MergeGerman.rc
   Languages\Hungarian\MergeHungarian.rc
   Languages\Italian\MergeItalian.rc